# blockyard

./: .gitattributes  .gitignore  .golangci.yml  .trivyignore.rego  .trivyignore.yaml  AGENTS.md  Cargo.toml  Makefile  README.md  blockyard.toml  codecov.yml  go.mod  go.sum
.devcontainer/: .env.example  .gitconfig  .gitignore  Dockerfile  devcontainer.json  docker-compose.yml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  debug.yml  docs.yml  merge.yml  mirror.yml  publish.yml  release.yml  review-reminders.yml  server-image.yml  server.yml  worker-publish.yml  worker.yml
cmd/blockyard/: backend_docker.go  backend_factory.go  backend_process.go  build_tags_default_test.go  build_tags_docker_test.go  build_tags_process_test.go  bwrapexec.go  doc.go  drainer_docker.go  drainer_process.go  drainer_process_test.go  main.go  main_test.go  orchestrator.go  orchestrator_docker.go  orchestrator_process.go  stores.go  stores_test.go
cmd/by/: access.go  admin.go  admin_integration_test.go  admin_test.go  apps.go  bundles.go  cli_integration_test.go  client.go  client_test.go  config.go  config_test.go  deploy.go  deploy_test.go  detect.go  detect_test.go  init.go  login.go  login_integration_test.go  logs.go  main.go  output.go  output_test.go  refresh.go  scale.go  selfupdate.go  selfupdate_test.go  tags.go  updatenotice.go  updatenotice_test.go  users.go
cmd/by-builder/: ingest.go  main.go  populate.go
cmd/coverage-check/: main.go
cmd/seccomp-compile/: main.go  main_test.go
cmd/seccomp-merge/: main.go  main_test.go
dev/: compose.yml
docker/: entrypoint.sh  extras.example.sh  extras.sh  r-versions.sh  r-worker.Dockerfile  server-everything.Dockerfile  server-process.Dockerfile  server.Dockerfile  worker.Dockerfile
docs/: .gitignore  astro.config.mjs  hugo.toml  install.sh  package-lock.json  package.json  prior-art.md  roadmap.md  v0-plan.md  v1-draft.md  v2-draft.md
docs/assets/: _chroma.scss  _custom.scss
docs/content/: _index.md
docs/design/: architecture.md  backends.md  board-storage.md  dep-mgmt.md  go-rewrite.md  migrations.md  roadmap.md  update.md  why-blockyard.md
docs/layouts/: index.html
docs/static/: install.sh
docs/v0/: phase-0-1.md  phase-0-2.md  phase-0-3.md  plan.md
docs/v1/: draft.md
docs/v2/: draft.md
e2e/: .gitignore  e2e_test.go  hello_blockr_postgrest_test.go  hello_blockr_test.go  hello_pocketbase_test.go  hello_postgrest_test.go  hello_shiny_test.go  hello_shiny_ui_test.go  helpers_test.go  package.json  refresh_test.go
e2e/tests/: login.spec.ts
ex/: hello_pocketbase_test.go  hello_postgrest_test.go  hello_shiny_test.go  helpers_test.go  refresh_test.go
examples/: Dockerfile.worker
examples/hello-auth/: README.md  deploy.sh  dex.yml  docker-compose.yml
examples/hello-blockr/: README.md  (+8 more)
examples/hello-blockr-postgrest/: deploy.sh  init.sql  setup.sh
migrations/: 001_initial.sql  002_remove_app_status.sql
src/: app.rs  config.rs  lib.rs  main.rs  ops.rs  task.rs
tests/: auth_test.rs  bundle_test.rs  docker_integration_test.rs  keycloak-docker-compose.yml  keycloak_test.rs
(+647 files in other folders)
