[package]
name = "blockyard"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[features]
default = ["docker"]
docker = ["dep:bollard"]
docker-tests = ["docker"]
docker-integration-tests = ["docker"]
test-support = []

[dependencies]
tokio       = { version = "1", features = ["full"] }
axum        = { version = "0.8", features = ["ws"] }
hyper       = { version = "1", features = ["full"] }
hyper-util  = "0.1"
http-body-util = "0.1"
tower       = { version = "0.5", features = ["util"] }
bollard     = { version = "0.18", optional = true }
sqlx        = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "0.8"
uuid        = { version = "1", features = ["v4"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror   = "2"
tokio-util  = { version = "0.7", features = ["io", "rt"] }
bytes       = "1"
futures-util = "0.3"
dashmap     = "6"
tempfile    = "3"
anyhow      = "1"
humantime-serde = "1"
humantime   = "2"
chrono      = { version = "0.4", features = ["serde"] }
flate2      = "1"
tar         = "0.4"
tokio-stream = { version = "0.1", features = ["sync"] }

# OIDC / JWT
openidconnect = "4"

# Session cookies
hmac            = "0.12"
sha2            = "0.10"

# Encoding
base64          = "0.22"

# URL encoding for return_url in login redirects
urlencoding     = "2"

[dependencies.tokio-tungstenite]
version = "0.26"

[dev-dependencies]
blockyard = { path = ".", features = ["test-support"] }
reqwest      = { version = "0.12", features = ["json", "cookies"] }
assert_matches = "1"
rsa          = "0.9"
rand         = "0.8"
jsonwebtoken = "9"
